# rust_micro_services

./: .gitignore  Cargo.toml  README.md
authentication_api/: Cargo.toml  README.md
authentication_api/src/: lib.rs  main.rs
authentication_api/src/database/: mongo_db.rs
authentication_api/src/handlers/: authentication.rs  user.rs
authentication_api/src/models/: authentication.rs  user.rs
authentication_api/src/routes/: authentication.rs  user.rs
authentication_api/src/services/: certification.rs  user.rs
customer_api/: Cargo.toml
customer_api/src/: lib.rs  main.rs
customer_api/src/handlers/: customer.rs
customer_api/src/models/: address.rs  contact.rs  customer.rs  messages.rs
customer_api/src/routes/: customer.rs
customer_api/src/services/: certification.rs  customer.rs  messaging.rs
egui_main/: Cargo.toml
egui_main/src/: app.rs  lib.rs  main.rs
egui_main/src/screens/: home.rs  login.rs  settings.rs
egui_main/src/services/: authentication.rs
orders_api/: Cargo.toml
orders_api/services/: certification.rs
orders_api/src/: lib.rs  main.rs
orders_api/src/messaging/: connection.rs  publisher.rs
orders_api/src/models/: address.rs  contact.rs  customer.rs
orders_api/src/utils/: load_settings.rs  password_utils.rs
