[package]
name = "customer_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
lapin = "3.0.0"
log = "0.4.27"
mongodb = "3.2.3"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-amqp = "2.0.0"
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "2.0.0"
